--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,27 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
+        },
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch via NPM",
+        "runtimeExecutable": "npm",
+        "runtimeArgs": [
+            "run-script",
+            "dev"
+        ],
+        "port": 9229,
+        "skipFiles": [
+            "<node_internals>/**"
+        ]
+    },
+        {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
